# typish

./: CMakeLists.txt  camera.cpp  camera.h  main.cpp  standard.frag  standard.vert  transform.cpp  transform.h
